syntax = "proto3";

package v1;
option go_package = "./v1;v1";
import "validate/validate.proto";
import "resource.proto";

message AllResourceValueRequest{
  int64 resource_id = 1;
}

message AllResourceValueReply {
  message ResourceValue{
    int64 id = 1;
    int64 environment_id = 2;
    int64 resource_id = 3;
    string values = 4;
  }
  repeated ResourceValue list = 1;
}

// 新增资源值
message AddResourceValueRequest {
  string environment_id = 1[(validate.rules).string = {min_len: 1, max_len: 32}];
  string resource_id = 2[(validate.rules).string = {min_len: 1, max_len: 32}];
  string values = 3;
}

// 修改资源值
message UpdateResourceValueRequest {
  int64 id = 1 [(validate.rules).int64 = {gt: 0}];
  string values = 4;
}

